Bug 971811 - Don't prepend an empty existing DYLD_INSERT_LIBRARIES path when launching the plugin. r=smichaud

--HG--
extra : rebase_source : 29048fe746e97b693ef4d1b3f87a531eab9dc0a4
extra : histedit_source : ecbe309757878f56b5b23d0fc5533e1405d5604a